--- a/public/index.html
+++ b/public/index.html
@@ -6,15 +6,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alliance Lowa</title>
-    <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
-    <link rel="icon" type="image/x-icon" href="favicons/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="/favicons/favicon.ico" />
 
     <link rel="stylesheet" href="/assets/css/preloader.css">
     <link rel="stylesheet" href="/assets/lib/animate/animate.min.css">
     <link rel="stylesheet" href="/assets/lib/lightbox/css/lightbox.min.css">
-    <link rel="stylesheet" href="/assets/lib/owlcarousel//assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/lib/owlcarousel/assets/owl.carousel.min.css">
 </head>
 
 <body>
