--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="icon" type="image/x-icon" href="/favicons/favicon.ico" />
 
     <link rel="stylesheet" href="/assets/css/preloader.css">
+    <link rel="stylesheet" href="/assets/css/croppie.css">
     <link rel="stylesheet" href="/assets/lib/animate/animate.min.css">
     <link rel="stylesheet" href="/assets/lib/lightbox/css/lightbox.min.css">
     <link rel="stylesheet" href="/assets/lib/owlcarousel/assets/owl.carousel.min.css">
