Added Project list component and project form components

--- a/public/index.html
+++ b/public/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="/assets/lib/animate/animate.min.css">
     <link rel="stylesheet" href="/assets/lib/lightbox/css/lightbox.min.css">
     <link rel="stylesheet" href="/assets/lib/owlcarousel/assets/owl.carousel.min.css">
+    <link rel="stylesheet" href="/assets/css/dataTables.bootstrap5.min.css">
 </head>
 
 <body>
@@ -93,6 +94,8 @@
 
     <script src="/assets/js/preloader.js"></script>
     <script src="/assets/js/jquery-3.4.1.min.js"></script>
+    <script src="/assets/js/jquery.dataTables.min.js"></script>
+    <script src="/assets/js/dataTables.bootstrap5.min.js"></script>
     <script src="/assets/lib/wow/wow.min.js"></script>
     <script src="/assets/lib/easing/easing.min.js" ,\></script>
     <script src="/assets/lib/waypoints/waypoints.min.js"></script>
@@ -100,6 +103,8 @@
     <script src="/assets/lib/owlcarousel/owl.carousel.min.js"></script>
     <script src="/assets/lib/isotope/isotope.pkgd.min.js"></script>
     <script src="/assets/lib/lightbox/js/lightbox.min.js"></script>
+    <script src="/assets/tinymce/tinymce.min.js"></script>
+    <script src="https://cdn.tiny.cloud/1/2jyb4lvwei5n8dqksx0q3leisrjazh7l4e8t2sfs9ir4k983/tinymce/6/plugins.min.js" referrerpolicy="origin"></script>
     <script src="/assets/js/custom.js"></script>
     <script src="/main.js"></script>
 </body>
